fix: BorderedIconClass not showing up properly

--- a/src/client/components/BorderedIcon/BorderedIconClass.module.css
+++ b/src/client/components/BorderedIcon/BorderedIconClass.module.css
@@ -4,6 +4,6 @@
   width: 80px;
   max-width: 33%;
   height: auto;
-  top: 2px;
-  left: 2px;
+  top: 0px;
+  left: 0px;
 }
